# coq-of-hs-experiment

./: README.md  coq-of-hs.cabal
.github/workflows/: coq-of-hs.yml
coq_translation/test/: Main.v
src/: CoqOfHs.hs
test/: Main.hs
